fix: header overlay opacity on mobile screns

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -15,7 +15,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba($clr-dark, 0.4);
+    background: rgba($clr-dark, 0.8);
     z-index: -1;
   }
 
